fixed navbar not lining up notable repos and removed extra whitespace at top of the page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,6 @@
 
 body {
     margin: 0px;
-    padding-top: 20px;
     background-color: var(--primary-dark);
     color: var(--text-light);
 }
